src/objects/kdKnowledge__c.object
<CustomObject>
    <fields>
        <fullName>AgencyLabel__c</fullName>
        <label>AgencyLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Channel__c</field>
                <operation>equals</operation>
                <value>一次代理店</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>営業ナレッジ</relationshipLabel>
        <relationshipName>kdKnowledge_Dairiten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedByDisplayedName__c</fullName>
        <label>CreatedByDisplayedName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>kdKnowledge_CreatedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DentouiriFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>殿堂入りフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>表示の順番</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisplayedDate__c</fullName>
        <label>DisplayedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HasMovie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasMovie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedByDisplayName__c</fullName>
        <formula>LastModifiedBy__r.DisplayedUsernameFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedByDisplayName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LastModifiedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LastModifiedKnowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedDateFormula__c</fullName>
        <formula>Datevalue(LastModifiedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDateFormula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MediumCategory__c</fullName>
        <label>MediumCategory</label>
        <picklist>
            <controllingField>Thema__c</controllingField>
            <picklistValues>
                <fullName>cate1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cate2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cate3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cate4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cate5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cate6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cate7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cate8</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MultipleFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>複数商材記事フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NbCopy__c</fullName>
        <label>NbCopy</label>
        <summaryFilterItems>
            <field>kdKnowledgeDetail__c.IsCopy__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>kdKnowledgeDetail__c.kdKnowledge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NbLike__c</fullName>
        <label>NbLike</label>
        <summaryFilterItems>
            <field>kdKnowledgeDetail__c.IsLike__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>kdKnowledgeDetail__c.kdKnowledge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NbView1Week__c</fullName>
        <label>NbView1Week</label>
        <summaryFilterItems>
            <field>kdKnowledgeDetail__c.IsView__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>kdKnowledgeDetail__c.InThisWeek__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>kdKnowledgeDetail__c.kdKnowledge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NbView__c</fullName>
        <label>NbView</label>
        <summaryFilterItems>
            <field>kdKnowledgeDetail__c.IsView__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>kdKnowledgeDetail__c.kdKnowledge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <formula>CreatedBy__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>組織名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostTimeDateFormula__c</fullName>
        <formula>Datevalue(PostTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PostTimeDateFormula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PostTime__c</fullName>
        <label>投稿日付</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecommendFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>事務局おすすめ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SharedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SharedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>kdKnowledge_SharedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>TemporarySaved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubjectDivision__c</fullName>
        <label>SubjectDivision</label>
        <picklist>
            <picklistValues>
                <fullName>V1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>V2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TechnicalFavorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thema__c</fullName>
        <label>Thema</label>
        <picklist>
            <picklistValues>
                <fullName>Val1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Val5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val28</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Value1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Value2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value9</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpdateModificationDateTime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdateModificationDateTime</label>
        <type>Checkbox</type>
    </fields>
    <label>営業ナレッジ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Thema__c</columns>
        <columns>NbView__c</columns>
        <columns>LastModifiedDate__c</columns>
        <columns>DisplayOrder__c</columns>
        <columns>PostTime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Title__c</columns>
        <columns>SharedBy__c</columns>
        <columns>CreatedByDisplayedName__c</columns>
        <columns>CreatedBy__c</columns>
        <columns>RecommendFlag__c</columns>
        <columns>DentouiriFlag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EK-{00000000}</displayFormat>
        <label>営業ナレッジ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>